--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: My Life in a Nutshell
+email: superbacon314@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+  Welcome to my blog! It was originally created as an experiment in coding. If you have somehow stumbled upon it, I apologize. I wasn't sure how it would turn out, and was quite surprised when it did, in fact, turn out at all. Anyways, have a nice day!
+baseurl: "blog" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  RAnderson21
 
 # Build settings
 markdown: kramdown
